--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+   margin-left: 10px;
+  margin-right: 10px; 
+   margin-top: 10px;
+  margin-bottom: 20px; 
 } 
 #container{
   background-image: url('images.html/hero\ image.jpeg');
@@ -39,21 +39,22 @@ body {
   #home{
     border-radius: 20px;
     background-color: orangered;
+    width: 100px;
   }
   #discover{
     text-align: center;
     margin-top: 200px;
     color: white;
-    font-size: xx-large;
+    font-size: large;
   }
   .book{
     border-radius: 200px;
     background-color: orangered;
-    padding: 8px;
-    padding-bottom: 20px;
-    padding-left: 100px;
+    padding: 5px;
+    /* padding-bottom: 20px; */
+    padding-left: 50px;
     color: aliceblue;
-    font-size: x-large;
+    font-size:large;
   }
 .photo1{
 height: 300px;
@@ -69,10 +70,10 @@ border-radius: 20px;
 }
 #word{
   text-align: center;
-  margin-top: 5%;
+  margin-top: 7%;
 }
 #line1{
-  font-size: xx-large;
+  font-size: x-large;
   font-style: oblique;
 }
 #line2{
@@ -81,17 +82,17 @@ border-radius: 20px;
 #travel{
   display: flex;
   gap: 5%;
-  margin-left: 200px;
+  margin-left: 90px;
   margin-top: 3%;
 }
 #backforwardicon{
-  margin-left: 700px;
+  margin-left: 500px;
 
 }
 #features{
   display: flex;
   gap: 3%;
-  margin-left: 200px;
+  margin-left: 100px;
   margin-top: 3%;
   font-style: italic;
 }
@@ -130,7 +131,7 @@ border-radius: 20px;
 #topdest{
   display: flex;
   gap: 1%;
-  margin-left: 200px;
+  margin-left: 100px;
   margin-top: 3%;
 }
 #ratingstar{
@@ -148,6 +149,7 @@ border-radius: 20px;
 }
 #exploring{
   background-image: url('images.html/sunrise.jpeg');
+  padding: 60px;
   background-repeat: no-repeat;
   height: 70vh;
   background-size: contain;
@@ -158,16 +160,23 @@ border-radius: 20px;
   font-size: large;
   
 }
+/* #Tuscany{
+ margin-right: 40px;
+} */
 #florence{
   display: flex;
-  gap: 3%;
+  /* gap: 3%; */
   margin-top:5%;
-  margin-left: 200px;
+  margin-left: 100px;
   font-size: larger;
 }
 .arroww{
-  margin-left: 600px;
+  /* margin-left: 600px; */
   margin-bottom: 5%;
+  width: 20px;
+}
+#March{
+  font-size: large;
 }
 
 
